// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table caption renders 1`] = `
.c1 {
  display: none;
}

.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
>
  <caption
    className="c1"
  >
    Caption
  </caption>
</table>
`;

exports[`Table renders 1`] = `
.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
/>
`;

exports[`TableBody renders 1`] = `
.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
>
  <tbody
    className=""
  />
</table>
`;

exports[`TableCell plain renders 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <td
        className="c1"
      />
    </tr>
  </thead>
</table>
`;

exports[`TableCell renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: top;
}

.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<table
  className="c0"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <td
        className="c1"
      >
        <div
          className="c2"
        />
      </td>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
    >
      <td
        className="c3"
      >
        <div
          className="c2"
        />
      </td>
    </tr>
  </tbody>
  <tfoot
    className=""
  >
    <tr
      className=""
    >
      <td
        className="c4"
      >
        <div
          className="c2"
        />
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`TableCell scope renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<table
  className="c0"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className="c1"
        scope="col"
      >
        <div
          className="c2"
        />
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
    >
      <th
        className="c3"
        scope="row"
      >
        <div
          className="c2"
        />
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`TableCell size renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 96px;
  max-width: 96px;
  overflow: hidden;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 192px;
  max-width: 192px;
  overflow: hidden;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 384px;
  max-width: 384px;
  overflow: hidden;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 768px;
  max-width: 768px;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 50%;
  max-width: 50%;
  overflow: hidden;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 25%;
  max-width: 25%;
  overflow: hidden;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 33.33%;
  max-width: 33.33%;
  overflow: hidden;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  width: 66.66%;
  max-width: 66.66%;
  overflow: hidden;
}

.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div>
  <table
    className="c0"
  >
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c1"
          size="xsmall"
        >
          <div
            className="c2"
          />
        </td>
        <td
          className="c3"
          size="small"
        >
          <div
            className="c2"
          />
        </td>
        <td
          className="c4"
          size="medium"
        >
          <div
            className="c2"
          />
        </td>
        <td
          className="c5"
          size="large"
        >
          <div
            className="c2"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="c0"
  >
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c6"
          size="1/2"
        >
          <div
            className="c2"
          />
        </td>
        <td
          className="c7"
          size="1/4"
        >
          <div
            className="c2"
          />
        </td>
        <td
          className="c7"
          size="1/4"
        >
          <div
            className="c2"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <table
    className="c0"
  >
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c8"
          size="1/3"
        >
          <div
            className="c2"
          />
        </td>
        <td
          className="c9"
          size="2/3"
        >
          <div
            className="c2"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell verticalAlign renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: top;
}

.c3 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: middle;
}

.c4 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<table
  className="c0"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <td
        className="c1"
      >
        <div
          className="c2"
        />
      </td>
      <td
        className="c3"
      >
        <div
          className="c2"
        />
      </td>
      <td
        className="c4"
      >
        <div
          className="c2"
        />
      </td>
    </tr>
  </thead>
</table>
`;

exports[`TableFooter renders 1`] = `
.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
>
  <tfoot
    className=""
  />
</table>
`;

exports[`TableHeader renders 1`] = `
.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
>
  <thead
    className=""
  />
</table>
`;

exports[`TableRow renders 1`] = `
.c0 {
  border-spacing: 0;
  border-collapse: collapse;
}

<table
  className="c0"
>
  <tbody
    className=""
  >
    <tr
      className=""
    />
  </tbody>
</table>
`;
